[package]
name = "azure-devops-time-used"
authors = ["Christian Borup <borup@adaptagency.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
treediff = { version = "4.0.2", features = ["serde_json"] }
uuid = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.13", features = ["derive","env"] }
